build_errors_3.txt
cargo :     Checking ai-lib v0.4.0 (D:\rustapp\ai-lib)
所在位置 行:1 字符: 1
+ cargo check 2>&1 | Out-File -Encoding utf8 build_errors_3.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ai...rustapp\ai-lib):Stri 
   ng) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
   --> src\client\builder.rs:432:44
    |
432 |                     return Err(AiLibError::InvalidConfiguration(format!(
    |                                            ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

warning: value assigned to `resolved_protocol` is never read
   --> src\client\builder.rs:247:17
    |
247 |         let mut resolved_protocol = String::new();
    |                 ^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` on by default

For more information about this error, try `rustc --explain E0599`.
warning: `ai-lib` (lib) generated 1 warning
error: could not compile `ai-lib` (lib) due to 1 previous error; 1 warning emitted
